--- a/.htaccess
+++ b/.htaccess
@@ -24,6 +24,10 @@ RewriteRule ^ https://%{HTTP_HOST}%{REQUEST_URI} [L,R=302,NE]
 RewriteRule ^$ index.php?route=HomeController:home [QSA]
 RewriteRule ^profile$ index.php?route=HomeController:profile [QSA]
 RewriteRule ^table$ index.php?route=HomeController:table [QSA]
+RewriteRule ^events$ index.php?route=EventController:list [QSA]
+RewriteRule ^admin/dashboard$ index.php?route=AdminController:dashboard [QSA]
+RewriteRule ^admin/dashboard$ index.php?route=AdminController:dashboard [QSA]
+RewriteRule ^admin/users$ index.php?route=AdminController:users [QSA]
 
 # RewriteRule ^posts/(.*)$ controllers/PostController.php?method=list&id=$1 [QSA]
 # RewriteRule ^admin/([a-z-]*)/edit/(.*)$ index.php?page=$1&edit_id=$2 [QSA]
