Created events-details page, filled with content: description, date, invitees, comments.

--- a/.htaccess
+++ b/.htaccess
@@ -25,6 +25,7 @@ RewriteRule ^$ index.php?route=HomeController:home [QSA]
 RewriteRule ^profile$ index.php?route=HomeController:profile [QSA]
 RewriteRule ^table$ index.php?route=HomeController:table [QSA]
 RewriteRule ^events$ index.php?route=EventController:list [QSA]
+RewriteRule ^event-details$ index.php?route=EventController:details [QSA]
 RewriteRule ^admin/dashboard$ index.php?route=AdminController:dashboard [QSA]
 RewriteRule ^admin/dashboard$ index.php?route=AdminController:dashboard [QSA]
 RewriteRule ^admin/users$ index.php?route=AdminController:users [QSA]
