--- a/.htaccess
+++ b/.htaccess
@@ -32,6 +32,7 @@ RewriteRule ^admin/users$ index.php?route=AdminController:users [QSA]
 
 
 RewriteRule ^user/register$ index.php?route=UserController:register [QSA]
+RewriteRule ^user/validate$ index.php?route=UserController:validateToken [QSA] 
 
 # RewriteRule ^posts/([0-9]+)$ index.php?route=AdminController:users?method=list&id=$1 [QSA]
 # RewriteRule ^admin/([a-z-]*)/edit/(.*)$ index.php?page=$1&edit_id=$2 [QSA]
