--- a/.htaccess
+++ b/.htaccess
@@ -25,7 +25,8 @@ RewriteRule ^$ index.php?route=HomeController:home [QSA]
 RewriteRule ^profile$ index.php?route=HomeController:profile [QSA]
 RewriteRule ^table$ index.php?route=HomeController:table [QSA]
 RewriteRule ^events$ index.php?route=EventController:list [QSA]
-RewriteRule ^event-details$ index.php?route=EventController:details [QSA]
+RewriteRule ^events/comment$ index.php?route=EventController:comment [QSA]
+RewriteRule ^events/details$ index.php?route=EventController:details [QSA]
 RewriteRule ^admin/dashboard$ index.php?route=AdminController:dashboard [QSA]
 RewriteRule ^admin/dashboard$ index.php?route=AdminController:dashboard [QSA]
 RewriteRule ^admin/users$ index.php?route=AdminController:users [QSA]
