--- a/.htaccess
+++ b/.htaccess
@@ -34,6 +34,8 @@ RewriteRule ^admin/users$ index.php?route=AdminController:users [QSA]
 
 RewriteRule ^user/register$ index.php?route=UserController:register [QSA]
 RewriteRule ^user/validate$ index.php?route=UserController:validateToken [QSA] 
+RewriteRule ^user/login$ index.php?route=UserController:login [QSA]
+RewriteRule ^user/logout$ index.php?route=UserController:logout [QSA]
 
 # RewriteRule ^posts/([0-9]+)$ index.php?route=AdminController:users?method=list&id=$1 [QSA]
 # RewriteRule ^admin/([a-z-]*)/edit/(.*)$ index.php?page=$1&edit_id=$2 [QSA]
