--- a/.htaccess
+++ b/.htaccess
@@ -31,7 +31,7 @@ RewriteRule ^admin/dashboard$ index.php?route=AdminController:dashboard [QSA]
 RewriteRule ^admin/users$ index.php?route=AdminController:users [QSA]
 
 RewriteRule ^user/register$ index.php?route=UserController:register [QSA]
-RewriteRule ^user/validate/([a-zA-Z0-9])+$ index.php?route=UserController:validateToken?token=$1 [QSA] 
+RewriteRule ^user/validate/([a-zA-Z0-9])+$ index.php?route=UserController:validateToken&token=$1 [QSA] 
 RewriteRule ^user/login$ index.php?route=UserController:login [QSA]
 RewriteRule ^user/logout$ index.php?route=UserController:logout [QSA]
 RewriteRule ^user/profile$ index.php?route=UserController:profile [QSA]
