--- a/.htaccess
+++ b/.htaccess
@@ -23,9 +23,12 @@ RewriteRule ^ https://%{HTTP_HOST}%{REQUEST_URI} [L,R=302,NE]
 
 RewriteRule ^$ index.php?route=HomeController:home [QSA]
 RewriteRule ^table$ index.php?route=HomeController:table [QSA]
+
 RewriteRule ^events$ index.php?route=EventController:list [QSA]
 RewriteRule ^events/comment$ index.php?route=EventController:comment [QSA]
 RewriteRule ^events/details$ index.php?route=EventController:details [QSA]
+RewriteRule ^events/edit/(new|[0-9]+)$ index.php?route=EventController:edit&id=$1 [QSA]
+
 RewriteRule ^admin/dashboard$ index.php?route=AdminController:dashboard [QSA]
 RewriteRule ^admin/dashboard$ index.php?route=AdminController:dashboard [QSA]
 RewriteRule ^admin/users$ index.php?route=AdminController:users [QSA]
