Finished password reset.

--- a/.htaccess
+++ b/.htaccess
@@ -34,11 +34,14 @@ RewriteRule ^admin/dashboard$ index.php?route=AdminController:dashboard [QSA]
 RewriteRule ^admin/users$ index.php?route=AdminController:users [QSA]
 
 RewriteRule ^user/register$ index.php?route=UserController:register [QSA]
-RewriteRule ^user/validate/([a-zA-Z0-9])+$ index.php?route=UserController:validateToken&token=$1 [QSA] 
+RewriteRule ^user/validate/([a-zA-Z0-9]+)$ index.php?route=UserController:validateToken&token=$1 [QSA] 
 RewriteRule ^user/login$ index.php?route=UserController:login [QSA]
 RewriteRule ^user/logout$ index.php?route=UserController:logout [QSA]
 RewriteRule ^user/profile$ index.php?route=UserController:profile [QSA]
 RewriteRule ^user/save$ index.php?route=UserController:save [QSA]
+RewriteRule ^user/forgot-password-mail$ index.php?route=UserController:forgotPasswordMail [QSA]
+RewriteRule ^user/reset-password/([a-zA-Z0-9]+)/([a-zA-Z0-9.!#$%&'*+/=?^_`{|}~-]+@[a-zA-Z0-9-]+(?:\.[a-zA-Z0-9-]+))*$ index.php?route=UserController:resetPassword&token=$1&email=$2 [QSA]
+RewriteRule ^user/forgot-password$ index.php?route=UserController:forgotPassword [QSA]
 
 # RewriteRule ^posts/([0-9]+)$ index.php?route=AdminController:users?method=list&id=$1 [QSA]
 # RewriteRule ^admin/([a-z-]*)/edit/(.*)$ index.php?page=$1&edit_id=$2 [QSA]
