--- a/.htaccess
+++ b/.htaccess
@@ -28,6 +28,8 @@ RewriteRule ^events$ index.php?route=EventController:list [QSA]
 RewriteRule ^events/comment$ index.php?route=EventController:comment [QSA]
 RewriteRule ^events/details$ index.php?route=EventController:details [QSA]
 RewriteRule ^events/edit/(new|[0-9]+)$ index.php?route=EventController:edit&id=$1 [QSA]
+RewriteRule ^events/save/(new|[0-9]+)$ index.php?route=EventController:save&id=$1 [QSA]
+RewriteRule ^events/delete/([0-9]+)$ index.php?route=EventController:delete&id=$1 [QSA]
 
 RewriteRule ^admin/dashboard$ index.php?route=AdminController:dashboard [QSA]
 RewriteRule ^admin/dashboard$ index.php?route=AdminController:dashboard [QSA]
