Event comments can be posted and viewed.

--- a/.htaccess
+++ b/.htaccess
@@ -26,7 +26,8 @@ RewriteRule ^table$ index.php?route=HomeController:table [QSA]
 
 RewriteRule ^events$ index.php?route=EventController:list [QSA]
 RewriteRule ^events/comment$ index.php?route=EventController:comment [QSA]
-RewriteRule ^events/details$ index.php?route=EventController:details [QSA]
+# RewriteRule ^events/details$ index.php?route=EventController:details [QSA]
+RewriteRule ^events/([0-9]+)$ index.php?route=EventController:details&id=$1 [QSA]
 RewriteRule ^events/edit/(new|[0-9]+)$ index.php?route=EventController:edit&id=$1 [QSA]
 RewriteRule ^events/save/(new|[0-9]+)$ index.php?route=EventController:save&id=$1 [QSA]
 RewriteRule ^events/delete/([0-9]+)$ index.php?route=EventController:delete&id=$1 [QSA]
