--- a/.htaccess
+++ b/.htaccess
@@ -33,6 +33,7 @@ RewriteRule ^events/save/(new|[0-9]+)$ index.php?route=EventController:save&id=$
 RewriteRule ^events/delete/([0-9]+)$ index.php?route=EventController:delete&id=$1 [QSA]
 RewriteRule ^events/nearby/([0-9.]+)/([0-9.]+)$ index.php?route=EventController:nearby&latitude=$1&longitude=$2 [QSA]
 RewriteRule ^events/invite-link/([a-zA-Z0-9]+)$ index.php?route=EventController:inviteLink&token=$1 [QSA]
+RewriteRule ^events/invite-save$ index.php?route=EventController:inviteSave [QSA]
 
 RewriteRule ^admin/dashboard$ index.php?route=AdminController:dashboard [QSA]
 RewriteRule ^admin/dashboard$ index.php?route=AdminController:dashboard [QSA]
