Updated htaccess file

--- a/.htaccess
+++ b/.htaccess
@@ -30,6 +30,7 @@ RewriteRule ^events/comment$ index.php?route=EventController:comment [QSA]
 RewriteRule ^events/([0-9]+)$ index.php?route=EventController:details&id=$1 [QSA]
 RewriteRule ^events/edit/(new|[0-9]+)$ index.php?route=EventController:edit&id=$1 [QSA]
 RewriteRule ^events/save/(new|[0-9]+)$ index.php?route=EventController:save&id=$1 [QSA]
+RewriteRule ^events/qr/([0-9]+)$ index.php?route=EventController:qr&id=$1 [QSA]
 RewriteRule ^events/pdf/([0-9]+)$ index.php?route=EventController:pdf&id=$1 [QSA]
 RewriteRule ^events/delete/([0-9]+)$ index.php?route=EventController:delete&id=$1 [QSA]
 RewriteRule ^events/nearby/([0-9.]+)/([0-9.]+)$ index.php?route=EventController:nearby&latitude=$1&longitude=$2 [QSA]
